refactor(changes): changes done

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,13 +17,16 @@ body {
 
 .triangle-box {
   clip-path: polygon(
-    0% 0%,
-    100% 0%,
-    99% 100%,
-    57% 100%,
-    50% 90%,
-    43% 100%,
-    0 100%
+    76% 0,
+    100% 0,
+    100% 100%,
+    55% 100%,
+    50% 92%,
+    45% 100%,
+    0 100%,
+    0% 70%,
+    0 0,
+    39% 0
   );
 }
 
