--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -41,3 +41,33 @@ body {
     0 100%
   );
 }
+
+.triangle {
+  position: relative;
+  text-align: left;
+  background: transparent;
+}
+.triangle:before,
+.triangle:after {
+  content: "";
+  position: absolute;
+  background-color: inherit;
+}
+.triangle,
+.triangle:before,
+.triangle:after {
+  width: 1em;
+  height: 1em;
+  border-top-right-radius: 35%;
+}
+
+.triangle {
+  transform: rotate(-60deg) skewX(-30deg) scale(1, 0.866);
+}
+.triangle:before {
+  transform: rotate(-135deg) skewX(-45deg) scale(1.414, 0.707)
+    translate(0, -50%);
+}
+.triangle:after {
+  transform: rotate(135deg) skewY(-45deg) scale(0.707, 1.414) translate(50%);
+}
