--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,7 +8,7 @@ body {
 
 @layer base {
   h1 {
-    @apply font-medium text-[35px] md:text-[40px];
+    @apply font-medium text-[18px] md:text-[35px] lg:text-[40px];
   }
   h2 {
     @apply font-bold text-[30px] md:text-[35px];
