--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,6 +14,26 @@ body {
     @apply font-bold text-[30px] md:text-[35px];
   }
 }
+@keyframes fade {
+  0% {
+    opacity: 0.4;
+  }
+  50% {
+    opacity: 0.8;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+.animation {
+  position: relative;
+  height: 100vh;
+  z-index: 100;
+  width: 100%;
+  opacity: 0;
+  animation: fade 0.4s ease-in forwards;
+  background: white;
+}
 
 .triangle-box {
   clip-path: polygon(
