--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -91,3 +91,18 @@ body {
 .triangle:after {
   transform: rotate(135deg) skewY(-45deg) scale(0.707, 1.414) translate(50%);
 }
+
+.img-wrap {
+  background: linear-gradient(
+    to right,
+    rgba(0, 0, 0, 0),
+    rgba(255, 255, 255, 0.5)
+  );
+}
+
+.frame {
+  width: 315px;
+  height: 165px;
+  margin: 20px;
+  position: relative;
+}
