--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,10 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-@font-face {
+/* @font-face {
   font-family: "SF Pro";
   src: url("./SF-Pro.dmg");
-}
+} */
 
 body {
   font-family: -apple-system, BlinkMacSystemFont, sans-serif;
