--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -138,3 +138,18 @@ body {
   width: 100%;
   height: 100%;
 }
+
+.trianglebox::after {
+  content: "";
+  position: absolute;
+  /* margin: 0 auto; */
+  bottom: -4px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 40px;
+  height: 25px;
+  background-color: #d5e5f7;
+  z-index: 1000;
+  border-radius: 50%;
+  clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
+}
