--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -108,7 +108,7 @@ body {
   position: relative;
 }
 
-.overlay {
+.fade-effect {
   content: "";
   position: absolute;
   top: 0;
@@ -118,10 +118,24 @@ body {
   background: linear-gradient(
     to right,
     rgb(0, 0, 0),
-    rgba(0, 0, 0, 0.85),
+    rgba(0, 0, 0, 0.9),
     rgba(0, 0, 0, 0.8),
     rgba(0, 0, 0, 0)
   );
+}
+
+.overlay::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  border-radius: 10px;
+  background: rgba(0, 0, 0, 0.6);
+  z-index: 2000;
+  display: block;
 }
 
 .img-effect {
