--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,13 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-/* @font-face {
-  font-family: "SF Pro";
-  src: url("./SF-Pro.dmg");
-} */
-
 body {
-  font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+  font-family: "myFirstFont";
   background-color: #d5e5f7;
 }
 
@@ -21,6 +16,12 @@ body {
   }
   .rounded-x {
     @apply rounded-[10px];
+  }
+}
+
+@layer utilities {
+  .scroll {
+    @apply scrollbar-thin scrollbar-thumb-gray-400 scrollbar-track-gray-100;
   }
 }
 @keyframes fade {
@@ -117,7 +118,7 @@ body {
   bottom: 0;
   background: linear-gradient(
     to right,
-    rgb(0, 0, 0,1),
+    rgb(0, 0, 0, 1),
     rgba(0, 0, 0, 0.9),
     rgba(0, 0, 0, 0.8),
     rgba(0, 0, 0, 0)
