--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -117,10 +117,14 @@ body {
   right: 0;
   bottom: 0;
   background: linear-gradient(
-    to right,
-    rgb(0, 0, 0, 1),
+    90deg,
+    #000,
+    rgb(0, 0, 0),
+    rgb(0, 0, 0),
+    rgb(0, 0, 0),
+    rgb(0, 0, 0),
     rgba(0, 0, 0, 0.9),
-    rgba(0, 0, 0, 0.8),
+    rgba(0, 0, 0, 0.5),
     rgba(0, 0, 0, 0)
   );
 }
